--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap');
+*{
+  font-family: 'Gamja Flower', cursive;
+}
+html{
+  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_yHwAl4bkw6k5XDLHQLUoiVCpQlqahtzxsA&usqp=CAU');
+  background-size: cover;
+  color: #242424;
+}
 .layout{
   max-width: 1200px;
   min-width: 800px;
@@ -8,17 +17,16 @@ display: flex;
 height: 70px;
 justify-content: center;
 align-items: center;
-border: 1px solid gray;
-background-color: burlywood;
+
 }
 .form-tag{
   display: flex;
   align-items: center;
-  border: 1px solid gray;
+  border: none;
   padding:30px;
   justify-content: space-between;
   border-radius: 10px;
-  background-color:chartreuse;
+  background-color:cornflowerblue
 }
 .form-tag label{
   font-size: 20px;
@@ -29,38 +37,42 @@ background-color: burlywood;
   height: 25px;
   border-radius: 10px;
   border: none;
-  width: 200px;
+  width: 300px;
 }
 .form-tag button{
-border: 1px solid black;
-background-color: aqua;
+border: none;
+background-color:lightskyblue;
 width: 100px;
 height: 50px;
 border-radius: 10px;
 cursor: pointer;
+}
+.form-tag button:hover{
+  background-color:dodgerblue;
 }
 .todo-list{
   display: flex;
   flex-wrap:wrap;
 }
 .todo-working{
-  border: 2px solid gold;
+  background-color:rgb(206, 167, 250);
   width: 250px;
   height: 200px;
   border-radius: 10px;
   margin: 0 10px;
+  padding: 20px;
 }
 .todo-working button{
-  background-color: white;
+  border: none;
   width: 100px;
   height: 40px;
   border-radius: 10px;
   cursor: pointer;
 }
 .delBtn{
-  border: 1px solid red;
+  background-color:rgb(255, 50, 50);
   margin: 20px 10px;
 }
 .booleanChangeBtn{
-  border: 1px solid green
+  background-color: rgb(70, 253, 53);
 }
