--- a/src/App.css
+++ b/src/App.css
@@ -1,78 +1,111 @@
-@import url('https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap');
-*{
-  font-family: 'Gamja Flower', cursive;
+/* 구글폰트 url */
+@import url("https://fonts.googleapis.com/css2?family=Gamja+Flower&display=swap");
+
+/* 전체 css  */
+* {
+  font-family: "Gamja Flower", cursive;
 }
-html{
-  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_yHwAl4bkw6k5XDLHQLUoiVCpQlqahtzxsA&usqp=CAU');
+button {
+  box-shadow: 0px 3px 5px 0px #000000;
+  transition: scale 0.3s;
+}
+button:hover{
+  scale: 1.1;
+}
+html {
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR_yHwAl4bkw6k5XDLHQLUoiVCpQlqahtzxsA&usqp=CAU");
   background-size: cover;
-  color: #242424;
 }
-.layout{
+.layout {
   max-width: 1200px;
   min-width: 800px;
   margin: 0 auto;
 }
-.todo-title{
-display: flex;
-height: 70px;
-justify-content: center;
-align-items: center;
 
+/* header */
+.todo-title {
+  display: flex;
+  height: 70px;
+  justify-content: center;
+  align-items: center;
+  font-size: 40px;
+  margin: 10px 0 30px 0;
 }
-.form-tag{
+
+/* form 태그 */
+.form-tag {
   display: flex;
   align-items: center;
   border: none;
-  padding:30px;
+  padding: 30px;
   justify-content: space-between;
   border-radius: 10px;
-  background-color:cornflowerblue
+  background-color: #768ca3;
+  color: rgb(255, 255, 255);
+  box-shadow: 0px 3px 5px 0px #000000;
 }
-.form-tag label{
+.form-tag label {
   font-size: 20px;
   font-weight: bolder;
   margin-left: 20px;
 }
-.form-tag input{
+.form-tag .input-title,
+.form-tag .input-content {
   height: 25px;
   border-radius: 10px;
   border: none;
+  font-size: 20px;
+}
+.form-tag .input-title {
   width: 300px;
 }
-.form-tag button{
-border: none;
-background-color:lightskyblue;
-width: 100px;
-height: 50px;
-border-radius: 10px;
-cursor: pointer;
+.form-tag .input-content {
+  width: 500px;
 }
-.form-tag button:hover{
-  background-color:dodgerblue;
-}
-.todo-list{
-  display: flex;
-  flex-wrap:wrap;
-}
-.todo-working{
-  background-color:rgb(206, 167, 250);
-  width: 250px;
-  height: 200px;
+.form-tag button {
+  border: none;
+  background-color: #d1e2ff;
+  width: 100px;
+  height: 50px;
   border-radius: 10px;
-  margin: 0 10px;
-  padding: 20px;
+  cursor: pointer;
 }
-.todo-working button{
+.form-tag button:hover {
+  background-color: #f092a5;
+}
+
+/* todo-list */
+.todo-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+.todo-working {
+  background-color: #a5cbf0;
+  width: 20%;
+  height: 20%;
+  border-radius: 10px;
+  margin: 10px;
+  padding: 10px;
+  color: rgb(66, 66, 66);
+  box-shadow: 0px 3px 5px 0px #000000;
+}
+.todo-working button {
   border: none;
   width: 100px;
   height: 40px;
   border-radius: 10px;
   cursor: pointer;
 }
-.delBtn{
-  background-color:rgb(255, 50, 50);
+.delBtn {
+  background-color: #f7b8c5;
   margin: 20px 10px;
 }
-.booleanChangeBtn{
-  background-color: rgb(70, 253, 53);
+.booleanChangeBtn {
+  background-color: #ceddf2;
+}
+.delBtn:hover {
+  background-color: rgb(255, 80, 80);
+}
+.booleanChangeBtn:hover {
+  background-color: rgb(150, 255, 150);
 }
